# EDD_2S2019_PY1_201709396

./: Ave.css  Ave.html  AveCircular.dot  CMakeLists.txt  Contorno_Negativo.dot  Contorno_Normal.dot  Contorno_XMIRROR.dot  Contorno.dot  Cubo.cpp  Cuerpo.dot  Cuerpo.txt  Cuerpo_Gray.dot  Cuerpo_Negativo.dot  Cuerpo_XMIRROR.dot  Cuerpo.dot  EDD_2S2019_Proyecto1_201709396.exe.stackdump  Entrada.csv  GenerarMatrizes.cpp  GenerarMatrizes.h  ListaCircular.cpp  ListaCircular.h  ListaDobleE.cpp  ListaDobleE.h  Matris.cpp  Matris.h  Menu.cpp  Nodo.h  NodoAbb.cpp  NodoAbb.h  NodoMatris.cpp  Pico_Patas_Negativo.dot  Pico_Patas_Normal.dot  Pico_Patas_XMIRROR.dot  Pico_Patas.dot  PrepararFiltros.cpp  PrepararFiltros.h  README.md  Report.h  ca.dot  main.cpp
EDD_2S2019_Proyecto1/: CMakeLists.txt  Cubo.h  EDD_2S2019_Proyecto1_201709396.exe.stackdump  GenerarImagen.cpp  GenerarImagen.h  GenerarMatrizes.cpp  GenerarMatrizes.h  Menu.cpp  Menu.h  Nodo.cpp  NodoMatris.h  PrepararArchivos.cpp  PrepararArchivos.h  PrepararFiltros.cpp  PrepararFiltros.h  Report.cpp  main.cpp
Entradas_AveEjemplo/: Contorno.csv  Cuerpo.csv  Pico_Patas.csv  config.csv  inicial.csv
Entradas_corrin/: capa0.csv  capa1.csv  capa2.csv  config.csv  inicial.csv
Entradas_deadpool/: config.csv  cuerpo.csv  espada.csv  inicial.csv  sombra.csv  traje.csv
Root/: Ave.css  AveReporte_filtros.dot  EDD_2S2019_Proyecto1_201709396.exe.stackdump  Pico_Patas_XMIRROR.dot  capa0_Normal.dot  capa1_Normal.dot  capa_Normal.dot  lucina.css  lucina.html
lucina/: capa0.txt  capa1.txt  capa2.txt  config.csv  (+1 more)
(+5 files in other folders)
