cmake_minimum_required(VERSION 3.14)
project(EDD_2S2019_Proyecto1_201709396)

set(CMAKE_CXX_STANDARD 17)

add_executable(EDD_2S2019_Proyecto1_201709396 main.cpp Matris.cpp Matris.h NodoMatris.cpp NodoMatris.h Cubo.cpp Cubo.h GenerarImagen.cpp GenerarImagen.h Menu.cpp Menu.h PrepararArchivos.cpp PrepararArchivos.h GenerarMatrizes.cpp GenerarMatrizes.h PrepararFiltros.cpp PrepararFiltros.h Report.cpp Report.h ListaCircular.cpp ListaCircular.h NodoAbb.cpp NodoAbb.h)